Revert "Fixed group chat height, now aligns with song queue"
This reverts commit caa58d61c2198a7b79b5a0fbd19ea17821254025.

--- a/src/css/components/Chat.css
+++ b/src/css/components/Chat.css
@@ -3,7 +3,6 @@
 	border-color: b3b3b3;
 	border-style: solid;
 	border-width: 1px;
-	margin-top: -90px;	
 }
 
 .chat-box {
